# svsm

./: 404.html  Cargo.toml  Makefile  index.html
.github/workflows/: rust.yml
boot/bldr/: Cargo.toml  build.rs
boot/bootimg/: Cargo.toml
boot/defs/: Cargo.toml
bootlib/src/: kernel_launch.rs  platform.rs
configs/: all-targets.json  hyperv-target.json  osbuild-target.json  qemu-target.json  vanadium-target.json
configs/test/: hyperv-test-target.json  vanadium-test-target.json
cpuarch/: Cargo.toml
cpuarch/src/: cpuid.rs  lib.rs  vmsa.rs  x86.rs
developer/CONTRIBUTING/: index.html
developer/DEVELOPMENT-PLAN/: index.html
developer/DOC-GUIDELINES/: index.html
developer/FUZZING/: index.html
developer/RUSTDOC-GUIDELINES/: index.html
elf/: Cargo.toml
elf/src/: lib.rs
fuzz/: Cargo.toml
hyperv/: Cargo.toml
hyperv/src/: lib.rs
igvmbuilder/: Cargo.toml
igvmbuilder/src/: cmd_options.rs  context.rs  cpuid.rs  gpa_map.rs  igvm_builder.rs  igvm_firmware.rs  main.rs  stage2_stack.rs  tdx_reset.rs  vmsa.rs
installation/INSTALL/: index.html
kernel/: Cargo.toml
kernel/src/: address.rs  boot_params.rs  boot_stage2.rs  config.rs  error.rs  fw_setup.rs  guest_fw.rs  igvm_params.rs  lib.rs  requests.rs  stage2.lds  stage2.rs  svsm.lds  svsm.rs  (+2 more)
libtcgtpm/: Makefile
rustdoc/: help.html  search-index.js  settings.html  src-files.js
src/: console.rs  io.rs  lib.rs  requests.rs  serial.rs  stage2.rs  svsm.rs  svsm_console.rs  svsm_paging.rs
stage1/: Cargo.toml
stage2/: Cargo.toml  build.rs
svsm/: Cargo.toml  build.rs
test_svsm/: Cargo.toml
(+1753 files in other folders)
